Add context resolve endpoint
